--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "uuid": "^11.1.0",
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
